improved project about page rendering on mobile fixed add permission on admin page refactored delete button for consistency reduced margin space for smaller screen size re-enabled functional test

--- a/grails-app/conf/data/bootstrap4/scss/partials/_project.scss
+++ b/grails-app/conf/data/bootstrap4/scss/partials/_project.scss
@@ -46,12 +46,11 @@
 
   #banner {
     &.project-banner {
-      height: auto;
       padding-top: 220px;
     }
   }
   .project-title {
-    position: relative;
+    position: absolute;
     h1 {
       font-size: 28px;
     }
